Archive/83d8401ca9a5c4b50f6a7c90314c7e64-9aacaa58bb9b2b6bbd8c180e8fda80a5/output
+ g++-4.8 -c -std=c++11 -Wall -Wextra -pedantic main.cpp
main.cpp: In function 'void wait(F&& ...)':
main.cpp:12:29: error: expected ';' before '...' token
     wait(std::forward<F>(f))...;
                             ^
main.cpp:12:32: error: parameter packs not expanded with '...':
     wait(std::forward<F>(f))...;
                                ^
main.cpp:12:32: note:         'f'
main.cpp:12:32: note:         'F'
